--- a/src/assets/scss/components/_shapes.scss
+++ b/src/assets/scss/components/_shapes.scss
@@ -1,3 +1,8 @@
+body :first-of-type {
+	position: relative;
+	z-index: $zindex-content;
+}
+
 .shapes {
 	position: absolute;
 	z-index: $zindex-background;
